src/app/auth/auth.component.css
.bd-container {
  position: absolute;
  max-width: 90%;
  width: 350px;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.toggle-password {
  position: absolute;
  right: 10px;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
}

